--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,18 +4,7 @@ on:
     types: [opened]
 permissions:
   pull-requests: write
-
 jobs:
-  post_welcome_comment:
+  welcome:
+    name: Post welcome comment
     runs-on: ubuntu-latest
-    steps:
-      - name: Comment on the pull request
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: "👋 Welcome to the repository! Thanks for opening a pull request."
-            })
